apps/python-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-generator-ingress
  namespace: automation
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pdf.vijaysingh.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdf-generator
                port:
                  number: 5000
